# recipe_categoriser

./: .env  Dockerfile  Pipfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/versions/: 7768617a9752_init.py
app/: auth.py  config.py  crud.py  database.py  main.py  models.py  schemas.py
app/scraper/: services.py
recipes/: crud.py  database.py  main.py  models.py  schemas.py
scraper/: bbcfood.py  main.py  services.py  utils.py
