[tool.poetry]
name = "recipe-categoriser"
version = "0.1.0"
description = ""
authors = ["ben langham <langham1291@outlook.com>"]
readme = "README.md"
packages = [{include = "recipe_categoriser"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.89.1"
recipe-scrapers = "^14.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
